update frontend apis

--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/utility.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script> -->
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 
@@ -19,7 +19,7 @@
     <header>
 
 
-        <div class="parnet_2" onclick="goSignUP(event)">
+        <div class="parent_2" onclick="goSignUP(event)">
 
             <button>Sign Up</button>
 
